syntax = "proto3";

package proto;
option go_package = "grpc/proto";

service StreamService {
  rpc List(StreamReq) returns (stream StreamResp) {};
  rpc Record(stream StreamReq) returns (StreamResp) {};
  rpc Route(stream StreamReq) returns (stream StreamResp) {};
}

message StreamPoint {
  string name = 1;
  int32 value = 2;
}

message StreamReq {
  StreamPoint pt = 1;
}

message StreamResp {
  StreamPoint pt = 1;
}